--- a/Index.html
+++ b/Index.html
@@ -89,16 +89,16 @@ Waiting to see you😊
 
  
  
- <a href="https://link.clashofclans.com/en?action=OpenLayout&id=TH13%3AWB%3AAAAALgAAAAF1E3N8CMUzh6Aset_izTWd"> TownHall 13</a> <br> <br>
+ <a href="https://link.clashofclans.com/cn?action=OpenLayout&id=TH13%3AWB%3AAAAABQAAAAH1SY0UXC3h-k9y6K6v6PcO&platform=kunlun-vivo"> TownHall 13</a> <br> <br>
  
- <a href="https://link.clashofclans.com/en?action=OpenLayout&id=TH12%3AWB%3AAAAABwAAAAGuM1wRX05rh9bULC0QLok2"> TownHall 12 </a>
+ <a href="https://link.clashofclans.com/cn?action=OpenLayout&id=TH12%3AWB%3AAAAAFwAAAAGzWpNLpQy9mdVVc0-yOkCa&platform=kunlun-uc"> TownHall 12 </a>
  <br> <br>
  
- <a href="https://link.clashofclans.com/en?action=OpenLayout&id=TH11%3AWB%3AAAAARgAAAAEdSnzHR4POQIg-G1H9HEww"> TownHall 11 </a>
+ <a href="https://link.clashofclans.com/en?action=OpenLayout&id=TH11%3AWB%3AAAAARAAAAAFu0StWfw9TIBLgQrmzrOzi"> TownHall 11 </a>
  <br> <br>
- <a href="https://link.clashofclans.com/en?action=OpenLayout&id=TH10%3AWB%3AAAAAUAAAAADtAwHpTmjFIUrpwcjC1zyn"> TownHall 10 </a>
+ <a href="https://link.clashofclans.com/en?action=OpenLayout&id=TH10%3AWB%3AAAAARwAAAAFvFjayyemlsLJmul4eHoDQ"> TownHall 10 </a>
  <br> <br>
- <a href="https://link.clashofclans.com/en?action=OpenLayout&id=TH9%3AWB%3AAAAAEQAAAAGGy7-yIq5kXYYGA89YVH5o"> TownHall 9 </a>
+ <a href="https://link.clashofclans.com/en?action=OpenLayout&id=TH9%3AWB%3AAAAAOQAAAAGK3PDYqGTjT1K_56xtikaw"> TownHall 9 </a>
  
  <h1><u>Penalty Points</u></h1>
  
