--- a/Index.html
+++ b/Index.html
@@ -116,15 +116,15 @@ Also, you can penalize the opponent's clan for having more 3 errors in war base.
 . <br> <br> </ul>
 
 <b><u>Minor Error's</u></b>
-<br> <br>
-<img src="1.jpg" alt="#"  width="300px"/>
-<br> <br>
 
-<img src="2.jpg" alt="#"  width="300px"/>
-<br> <br>
-<img src="3.jpg" alt="#" width="300px"/>
-<br> <br>
-<img src="4.jpg" alt="#"  width="300px"/>
+<a href="https://g-minor-mistakes.herokuapp.com/"> <button>
+ minor Mistakes </button></a>
+
+
+
+
+
+
 
 
 <br> <br>
