--- a/Index.html
+++ b/Index.html
@@ -117,7 +117,7 @@ Also, you can penalize the opponent's clan for having more 3 errors in war base.
 
 <b><u>Minor Error's</u></b>
 
-<a href="https://g-minor-mistakes.herokuapp.com/"> <button>
+<a style="color:red ;href="https://g-minor-mistakes.herokuapp.com/"> <style= "background-color:black;button>
  minor Mistakes </button></a>
 
 
@@ -147,7 +147,7 @@ Also, you can penalize the opponent's clan for having more 3 errors in war base.
   <td>0</td>
 </tr>
 
-<tr>
+<tr>ni
   
   <td>2.</td>
   <td>13-20</td>
