--- a/Index.html
+++ b/Index.html
@@ -117,7 +117,7 @@ Also, you can penalize the opponent's clan for having more 3 errors in war base.
 
 <b><u>Minor Error's</u></b>
 
-<a style="color:red ;href="https://g-minor-mistakes.herokuapp.com/"> <style= "background-color:black;button>
+<a href="https://g-minor-mistakes.herokuapp.com/"> <button>
  minor Mistakes </button></a>
 
 
