--- a/Index.html
+++ b/Index.html
@@ -115,10 +115,10 @@ Also, you can penalize the opponent's clan for having more 3 errors in war base.
   <li><u>Troops in CC:</u> <b>1 Point</b></li>
 . <br> <br> </ul>
 
-<b><u>Minor Error's</u></b>
 
-<a href="https://g-minor-mistakes.herokuapp.com/"> <button>
- minor Mistakes </button> </a>
+
+h1> Click to know minor mistakes <a href="https://g-minor-mistakes.herokuapp.com/"> <button>
+ minor Mistakes </button> </a> 
 
 
 
