--- a/Index.html
+++ b/Index.html
@@ -117,8 +117,8 @@ Also, you can penalize the opponent's clan for having more 3 errors in war base.
 
 
 
-h1> Click to know minor mistakes <a href="https://g-minor-mistakes.herokuapp.com/"> <button>
- minor Mistakes </button> </a> 
+h1>  To know minor mistakes <a href="https://g-minor-mistakes.herokuapp.com/"> <button>
+ Minor Mistakes </button> </a> </h1>
 
 
 
