--- a/Index.html
+++ b/Index.html
@@ -117,7 +117,7 @@ Also, you can penalize the opponent's clan for having more 3 errors in war base.
 
 
 
-h1>  To know minor mistakes <a href="https://g-minor-mistakes.herokuapp.com/"> <button>
+<h1>  To know minor mistakes <a href="https://g-minor-mistakes.herokuapp.com/"> <button style=size:10px 15px;>
  Minor Mistakes </button> </a> </h1>
 
 
