--- a/Index.html
+++ b/Index.html
@@ -43,10 +43,16 @@
 3️⃣Recruit players from Social Media such as Band and others (search groups for keywords Clash of Clans, COC, recruitment etc),<br> reddit forums etc. 
 →Now new option of Recruitment has been added by Supercell, which is really a good way to find players who are interested in FARMING.<br>
 4️⃣You will need 50 players with correct Farming War bases and set them  active for war <br>
-Th13 -> 10+<br>
-Th12 -> 15+<br>
-Th11 -> 10+<br>
-Remaining TH10 and TH9<br>
+Th14+13 = 10<br>
+
+Th14+13+12 = 25<br>
+
+Th 11 = 11<br>
+
+Rest Th 10 & 9<br>
+
+
+
 No TH8 is allowed<br>
 Only 50vs50 war allowed
 <br>Clans are allowed to play CWL<br>
